feat: initial data reading from meshtastic ble

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -14,6 +14,8 @@
   "advertisement": "Advertisement",
   "advertisedName": "Advertised name",
   "connectable": "Connectable",
+  "connect": "Connect",
+  "disconnect": "Disconnect",
   "yes": "Yes",
   "no": "No",
 
