feat: log viewer

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,5 +37,7 @@
   "unknown": "unknown",
   "searchHint": "Search devices by name or ID",
   "loraOnlyFilterLabel": "LoRa only",
-  "meshtasticLabel": "Meshtastic"
+  "meshtasticLabel": "Meshtastic",
+
+  "settingsButtonLabel": "Settings"
 }
