feat: direct node chat

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -165,5 +165,71 @@
   "chat": "Chat",
   "typeMessage": "Type a message...",
   "messageTooLong": "Message too long",
-  "sendFailed": "Failed to send: {error}"
+  "sendFailed": "Failed to send: {error}",
+  "buildPrefix": "Build: ",
+  "builtPrefix": "Built: ",
+  "agoSeconds": "{seconds}s ago",
+  "agoMinutes": "{minutes}m ago",
+  "agoHours": "{hours}h ago",
+  "agoDays": "{days}d ago",
+  "sortAsc": "ASC",
+  "sortDesc": "DESC",
+  "unknownState": "Unknown",
+  "languageSystem": "System",
+  "languageEnglish": "English",
+  "languagePolish": "Polski",
+  "languageFollowSystem": "Follow system language",
+  "languageAppLanguage": "App language: {language}",
+  "eventDetails": "Event details",
+  "myInfo": "MyInfo",
+  "config": "Config",
+  "configComplete": "Config complete",
+  "rebooted": "Rebooted",
+  "moduleConfig": "Module config",
+  "channel": "Channel",
+  "queueStatus": "Queue status",
+  "deviceMetadata": "Device metadata",
+  "mqttProxy": "MQTT proxy",
+  "fileInfo": "File info",
+  "clientNotification": "Client notification",
+  "deviceUiConfig": "Device UI config",
+  "logRecord": "Log record",
+  "packet": "Packet",
+  "textPayload": "Text payload",
+  "position": "Position",
+  "rawPayloadDetails": "Raw payload ({name}:{id}, {bytes} bytes)",
+  "encryptedUnknownPayload": "Encrypted/unknown payload",
+  "configUpdate": "Config update",
+  "configStreamComplete": "Config stream complete",
+  "deviceReportedReboot": "Device reported reboot",
+  "noReboot": "No reboot",
+  "channelUpdate": "Channel update",
+  "routingMessage": "Routing message",
+  "adminMessage": "Admin message",
+  "positionUpdate": "Position update",
+  "userInfo": "User info",
+  "remoteHw": "Remote HW: {type} mask={mask} value={value}",
+  "storeForwardVariant": "Store & Forward ({variant})",
+  "telemetryVariant": "Telemetry ({variant})",
+  "device": "Device",
+  "serial": "Serial",
+  "rangeTest": "Range test",
+  "externalNotification": "External notification",
+  "audio": "Audio",
+  "cannedMessage": "Canned message",
+  "ambientLighting": "Ambient lighting",
+  "detectionSensor": "Detection sensor",
+  "dtnOverlay": "DTN overlay",
+  "broadcastAssist": "Broadcast assist",
+  "nodeFilter": "Node filter",
+  "nodeHighlight": "Node highlight",
+  "map": "Map",
+  "snrDb": "SNR {value} dB",
+  "nodeTitle": "Node {name}",
+  "nodeTitleId": "Node ({id})",
+  "nodeInfo": "NodeInfo",
+  "batteryLevel": "🔋{percentage}%",
+  "viaNameId": "via {name} (0x{id})",
+  "viaName": "via {name}",
+  "viaId": "via 0x{id}"
 }
