--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -161,5 +161,73 @@
   "messageTooLong": "Wiadomość za długa",
   "sendFailed": "Nie udało się wysłać: {error}",
 
-  "failedToShareLogs": "Nie udało się udostępnić logów: {error}"
+  "failedToShareLogs": "Nie udało się udostępnić logów: {error}",
+  "buildPrefix": "Wersja: ",
+  "builtPrefix": "Zbudowano: ",
+  "agoSeconds": "{seconds}s temu",
+  "agoMinutes": "{minutes}m temu",
+  "agoHours": "{hours}g temu",
+  "agoDays": "{days}d temu",
+  "sortAsc": "ROS",
+  "sortDesc": "MAL",
+  "unknownState": "Nieznany",
+  "languageSystem": "Systemowy",
+  "languageEnglish": "Angielski",
+  "languagePolish": "Polski",
+  "languageFollowSystem": "Zgodnie z systemem",
+  "nodeTitleHex": "Węzeł 0x{hex}",
+  "eventsExport": "Eksport zdarzeń",
+  "languageAppLanguage": "Język aplikacji: {language}",
+  "eventDetails": "Szczegóły zdarzenia",
+  "myInfo": "MyInfo",
+  "config": "Konfiguracja",
+  "configComplete": "Konfiguracja zakończona",
+  "rebooted": "Zrestartowano",
+  "moduleConfig": "Konfiguracja modułu",
+  "channel": "Kanał",
+  "queueStatus": "Stan kolejki",
+  "deviceMetadata": "Metadane urządzenia",
+  "mqttProxy": "Proxy MQTT",
+  "fileInfo": "Informacje o pliku",
+  "clientNotification": "Powiadomienie klienta",
+  "deviceUiConfig": "Konfiguracja UI urządzenia",
+  "logRecord": "Wpis logu",
+  "packet": "Pakiet",
+  "textPayload": "Ładunek tekstowy",
+  "position": "Pozycja",
+  "rawPayloadDetails": "Surowy ładunek ({name}:{id}, {bytes} bajtów)",
+  "encryptedUnknownPayload": "Zaszyfrowany/nieznany ładunek",
+  "configUpdate": "Aktualizacja konfiguracji",
+  "configStreamComplete": "Strumień konfiguracji zakończony",
+  "deviceReportedReboot": "Urządzenie zgłosiło restart",
+  "noReboot": "Brak restartu",
+  "channelUpdate": "Aktualizacja kanału",
+  "routingMessage": "Wiadomość routingu",
+  "adminMessage": "Wiadomość admina",
+  "positionUpdate": "Aktualizacja pozycji",
+  "userInfo": "Informacje o użytkowniku",
+  "remoteHw": "Zdalny sprzęt: {type} maska={mask} wartość={value}",
+  "storeForwardVariant": "Przechowaj i przekaż ({variant})",
+  "telemetryVariant": "Telemetria ({variant})",
+  "device": "Urządzenie",
+  "serial": "Port szeregowy",
+  "rangeTest": "Test zasięgu",
+  "externalNotification": "Powiadomienie zewnętrzne",
+  "audio": "Audio",
+  "cannedMessage": "Wiadomość szablonowa",
+  "ambientLighting": "Oświetlenie otoczenia",
+  "detectionSensor": "Czujnik wykrywania",
+  "dtnOverlay": "Nakładka DTN",
+  "broadcastAssist": "Asystent rozgłaszania",
+  "nodeFilter": "Filtr węzłów",
+  "nodeHighlight": "Podświetlenie węzłów",
+  "map": "Mapa",
+  "snrDb": "SNR {value} dB",
+  "nodeTitle": "Węzeł {name}",
+  "nodeTitleId": "Węzeł ({id})",
+  "nodeInfo": "NodeInfo",
+  "batteryLevel": "🔋{percentage}%",
+  "viaNameId": "przez {name} (0x{id})",
+  "viaName": "przez {name}",
+  "viaId": "przez 0x{id}"
 }
